2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* configure.ac (MAKEFILE_SUFFIX): Variable removed.
	(GNUSTEP_MAKEFILES): New variable (that is more standard and more
	suited to make it a configure option in the future).  Replace it
	in generated files.
	* configure: Regenerated.
	* debugapp.in: Use everywhere GNUSTEP_MAKEFILES, not
	MAKEFILE_SUFFIX.
	* opentool.in: Same change.
	* GNUmakefile.in: Same change.
	* executable.template.in: Same change.
	* GNUstep.sh.in: Same change.
	* GNUstep.csh.in: Same change.
	* gnustep-make.spec.in: Removed MAKEFILE_SUFFIX, use Library/Makefiles
	directly.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Removed obsolete --without-system-root option.
	* configure: Regenerated.

2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac (root_prefix): Variable removed.  Wasn't used or
	replaced anywhere.
	* configure: Regenerated.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Use /usr/pkg/etc/GNUstep.conf instead of
	/usr/pkg/etc as GNUstep config file on NetBSD (Suggestion by David
	Ayers).
	* configure: Regenerated.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Generate GNUstep.conf from GNUstep.conf.in
	so that GNUstep.conf gets properly setup with the paths that
	are configured into gnustep-make
	* GNUstep.conf.in: New file.
	* GNUstep.conf: Removed.
	* configure: Regenerated.
	* GNUmakefile.in (install): Install the GNUstep.conf file
	in the chosen location for the GNUstep config file.
	
2005-10-12  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Added --with-config-file=xxx (code partially taken
	from gnustep-base) option.
	* config.make.ac: Added GNUSTEP_CONFIG_FILE variable holding the
	configured location of the config file for this installation.
	* configure: Regenerated.
	
2005-10-06 Tom MacSween <macsweent@sympatico.ca>

	* Fixes for cygwin.
	* Instance/rules.make: Add Windows resource files for cygwin