@@ -35,7 +35,7 @@ special_prefix =
 
 GNUSTEP_CONFIG_FILE = $(special_prefix)@gnustep_config_file@
 GNUSTEP_CONFIG_FILE_DIR = $(dir $(GNUSTEP_CONFIG_FILE))
-GNUSTEP_SYSTEM_ROOT = $(special_prefix)@prefix@
+GNUSTEP_SYSTEM_ROOT = $(special_prefix)@GNUSTEP_SYSTEM_ROOT@
 GNUSTEP_LOCAL_ROOT  = $(special_prefix)@GNUSTEP_LOCAL_ROOT@
 GNUSTEP_NETWORK_ROOT = $(special_prefix)@GNUSTEP_NETWORK_ROOT@
 srcdir = @srcdir@
