@@ -77,7 +77,7 @@ fi
 # instead where the paths are configured!
 #
 GNUSTEP_ROOT=@GNUSTEP_ROOT@
-GNUSTEP_SYSTEM_ROOT=@prefix@
+GNUSTEP_SYSTEM_ROOT=@GNUSTEP_SYSTEM_ROOT@
 GNUSTEP_FLATTENED=@GNUSTEP_FLATTENED@
 if [ -z "$LIBRARY_COMBO" ]; then
   LIBRARY_COMBO=@ac_cv_library_combo@
